setup_k8s/istio/allow_eventbus.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-eventbus
spec:
  hosts:
  - clustered-app.default.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: 7800
    name: tcp
    protocol: TCP
  resolution: NONE
