setup_k8s/istio/envoy_filter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: gateway
      version: v1      
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1      
  template:
    metadata:
      labels:
        app: gateway
        version: v1
        cluster: clustered-app
    spec:
      containers:
        - name: gateway
          image: tuantahp/gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 31862
            - containerPort: 7800
            - containerPort: 5006 # JDWP port
          livenessProbe:
            httpGet:
              path: /health
              port: 31862
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readiness
              port: 31862
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /readiness
              port: 31862
            failureThreshold: 30
            periodSeconds: 10          
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment-v2
  labels:
    app: gateway
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: gateway
      version: v2      
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1      
  template:
    metadata:
      labels:
        app: gateway
        version: v2
        cluster: clustered-app
    spec:
      containers:
        - name: gateway
          image: tuantahp/gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 31862
            - containerPort: 7800
            - containerPort: 5006 # JDWP port
          livenessProbe:
            httpGet:
              path: /health
              port: 31862
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readiness
              port: 31862
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /readiness
              port: 31862
            failureThreshold: 30
            periodSeconds: 10      
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: default
spec:
  selector:
    app: gateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 31862
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: smartconsultor-certificate-tls
    hosts:
    - "smartconsultor.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-virtualservice
spec:
  hosts:
  - "smartconsultor.com"
  gateways:
  - gateway-gateway
  http:
  - match:
    - uri:
        prefix: /
    - headers:
        version:
          exact: "v1"        
    route:
    - destination:
        host: gateway
        port:
          number: 80
        subset: v1  
  - match:
    - uri:
        prefix: /
    - headers:
        version:
          exact: "v2"        
    route:
    - destination:
        host: gateway
        port:
          number: 80
        subset: v2          
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gateway-service-destination
  namespace: default
spec:
  host: gateway.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      http:
        http1MaxPendingRequests: 100
        maxRequestsPerConnection: 10
      tcp:
        maxConnections: 1000
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: tcp-keepalive-filter
  namespace: default
spec:
  workloadSelector:
    labels:
      app: gateway
  configPatches:
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
      cluster:
        service: gateway.default.svc.cluster.local
    patch:
      operation: MERGE
      value:
        upstream_connection_options:
          tcp_keepalive:
            keepalive_time: 7200         # 2 hours (you can adjust as needed)
            keepalive_interval: 75       # 75 seconds (you can adjust as needed)
            keepalive_probes: 9          # 9 (you can adjust as needed)
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-headers-filter
  namespace: default
spec:
  workloadSelector:
    labels:
      app: my-app
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.router
        config:
          headers_to_add:
          - header:
              key: "x-custom-header"
              value: "custom-value"
